app/nginx/ingressrouters.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.kubernetes.ml`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
      # middlewares:
      #   - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.kubernetes.ml`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    certResolver: myresolver
